--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,17 +1,25 @@
-spring.application.name=spotjam
-
+# --- Server / Profile ---
 server.port=8080
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://svc.sel3.cloudtype.app:30860/spotjam-db
-spring.datasource.username=root
-spring.datasource.password=root
+# --- DataSource (PostgreSQL on Cloudtype) ---
+# 기본값은 네가 준 Cloudtype 접속값.
+# 필요 시 SPRING_DATASOURCE_URL / USERNAME / PASSWORD 환경변수로 덮어쓰기 가능.
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://svc.sel3.cloudtype.app:30860/spotjam-db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.hikari.maximum-pool-size=10
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# --- JPA / Hibernate ---
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-management.endpoints.web.exposure.include=health,info
+# --- Flyway (DB 스키마 버전 관리) ---
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
 
-# 헬스 체크 URL로 사용할 /actuator/health 엔드포인트 허용
-management.endpoint.health.show-details=always
+# --- CORS ---
+# 쉼표(,)로 여러 도메인 허용. 로컬/베르셀 둘 다 기본 허용값 제공.
+cors.allowed.origins=https://spot-jam.vercel.app.vercel.app,http://localhost:3000
