--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,4 +22,4 @@ spring.flyway.locations=classpath:db/migration
 
 # --- CORS ---
 # 쉼표(,)로 여러 도메인 허용. 로컬/베르셀 둘 다 기본 허용값 제공.
-cors.allowed.origins=https://spot-jam.vercel.app.vercel.app,http://localhost:3000
+cors.allowed.origins=${CORS_ALLOWED_ORIGINS:https://spot-jam.vercel.app,http://localhost:3000}
