--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,32 +1,23 @@
-# --- Server / Profile ---
-server.port=8080
+server.port=${PORT:8080}
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 
-# --- DataSource (PostgreSQL on Cloudtype) ---
-# 기본값은 네가 준 Cloudtype 접속값.
-# 필요 시 SPRING_DATASOURCE_URL / USERNAME / PASSWORD 환경변수로 덮어쓰기 가능.
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://svc.sel3.cloudtype.app:30860/spotjam-db}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://svc.sel3.cloudtype.app:30860/spotjam-db?sslmode=require}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=10000
 
-# --- JPA / Hibernate ---
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
-# --- Flyway (DB 스키마 버전 관리) ---
-# 테스트에서는 Flyway 끔 (DB 없어도 통과)
-spring.flyway.enabled=false
 spring.flyway.locations=classpath:db/migration
 
-# --- CORS ---
-# 쉼표(,)로 여러 도메인 허용. 로컬/베르셀 둘 다 기본 허용값 제공.
 cors.allowed.origins=${CORS_ALLOWED_ORIGINS:https://spot-jam.vercel.app,http://localhost:3000}
 
-# Actuator health 공개
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
-# (CORS에 프론트 도메인 허용은 기존 설정 그대로)
 
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.springframework.boot.autoconfigure.jdbc=DEBUG
