--- a/backend/gradle/wrapper/gradle-wrapper.properties
+++ b/backend/gradle/wrapper/gradle-wrapper.properties
@@ -1,5 +1,7 @@
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=gradle-8.14.3-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.3-bin.zip
+# (선택) SHA256 합도 맞추려면 공식 값으로 넣기. 모르면 이 줄은 없어도 동작함.
+# distributionSha256Sum=<공식 체크섬>
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
