--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,23 +1,27 @@
+# --- Server / Profile ---
 server.port=${PORT:8080}
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 
+# --- PostgreSQL (Cloudtype) ---
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://svc.sel3.cloudtype.app:30860/spotjam-db?sslmode=require}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=10000
 
+# --- JPA ---
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 
+# --- Flyway ---
+spring.flyway.enabled=${SPRING_FLYWAY_ENABLED:false}
 spring.flyway.locations=classpath:db/migration
 
-cors.allowed.origins=${CORS_ALLOWED_ORIGINS:https://spot-jam.vercel.app,http://localhost:3000}
+# --- CORS ---
+cors.allowed.origins=${CORS_ALLOWED_ORIGINS:http://localhost:3000}
 
+# --- Actuator ---
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
-
-logging.level.com.zaxxer.hikari=DEBUG
-logging.level.org.springframework.boot.autoconfigure.jdbc=DEBUG
