--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tiptap/extension-image": "^3.15.1",
+    "@tiptap/extension-placeholder": "^3.15.1",
+    "@tiptap/react": "^3.15.1",
+    "@tiptap/starter-kit": "^3.15.1",
     "next": "^16.0.8",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
