--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=${PORT:8080}
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:prod}
 
 # --- PostgreSQL (Cloudtype) ---
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://svc.sel3.cloudtype.app:30860/spotjam-db?sslmode=require}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://svc.sel3.cloudtype.app:30860/spotjam-db?sslmode=prefer}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.datasource.hikari.maximum-pool-size=10
